[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroquant"
version = "1.0.0"
description = "Market Intelligence Platform combining Vedic Astrology with Machine Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AstroQuant Team"}
]
keywords = ["astrology", "finance", "machine-learning", "vedic", "market-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ephem>=4.1.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "yfinance>=0.2.36",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
all = [
    "astroquant[ml,dev]",
]

[project.urls]
Homepage = "https://github.com/HAP2Y/AstroQuant"
Documentation = "https://github.com/HAP2Y/AstroQuant#readme"
Repository = "https://github.com/HAP2Y/AstroQuant"
Issues = "https://github.com/HAP2Y/AstroQuant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "models*", "data*", "ui*", "utils*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.pytest_cache
    | data/cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "venv", ".venv", "__pycache__", "data/cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
    "data/cache",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert warnings in non-test code
